--- a/Flatout2Launcher/Flatout2Launcher.csproj
+++ b/Flatout2Launcher/Flatout2Launcher.csproj
@@ -65,4 +65,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <None Update="filePaths.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
